syntax = "proto3";
package didcomm;

option go_package = "didcomm/issuer/api";

message CredentialAttribute {
  string name = 1;
  string value = 2;
}

message OfferCredentialRequest {
  string connection_id = 1;
  string schema_id = 2;
  repeated CredentialAttribute attributes = 3;
  string comment = 4;
}

message OfferCredentialResponse {
  string credential_id = 1;
}

service Issuer {
  rpc OfferCredential (OfferCredentialRequest) returns (OfferCredentialResponse) {}
}